--- a/todoreact/src/App.css
+++ b/todoreact/src/App.css
@@ -1,12 +1,20 @@
 .container{
   margin: auto;
   width: 50%;
-  border: 1px solid #73ad21;
-  background-color: #32746a;
+  border: 1px solid #008080;
+  background-color: #007580;
   padding: 10px;
+  border-radius: 10px;
 }
-.add-btn{
+.del-btn{
   float: right;
   background-color: #ff0000;
   color: #ffffff;
+  border-radius: 5px;
+}
+.add-btn{
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 5px;
+  margin:15px;
 }
